@@ -8,6 +8,7 @@ Change log next version
               "x", equalTo(5),
               "x", lessThan(3));
   The reason was the only the last first and last "x" expectation were taken into account (issue 714).
+* Removed log.warn(..) messages from internal classes (issue 715)
 
 Change log 3.0.0 (2016-06-03)
 -----------------------------
